@@ -68,16 +68,6 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.lucene</groupId>
-      <artifactId>lucene-analyzers-smartcn</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.lucene</groupId>
-      <artifactId>lucene-analyzers-stempel</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
       <!-- SOLR-3263: Test scope dep is required to avoid jar signing conflicts -->
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
